--- a/app/src/main/res/layout/fragment_adj.xml
+++ b/app/src/main/res/layout/fragment_adj.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="25dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,6 +10,7 @@
         android:layout_width="34dp"
         android:layout_height="34dp"
         android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/arrowbackbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
